mdt_cli/tests/snapshots/snapshots__init_existing_template.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpUPVOH2
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Initializing [TEMP_DIR]
Created mdt.toml
Template file already exists: template.t.md

----- stderr -----
