mdt_cli/tests/snapshots/snapshots__init_fresh_directory.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpLoPdOl
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Initializing [TEMP_DIR]
Created mdt.toml
Created .templates/template.t.md with a sample `greeting` provider
Created readme.md with a synced `greeting` consumer

Next steps:
  1. Open readme.md to see the synced sample block
  2. Edit .templates/template.t.md, then run `mdt update`
  3. Run `mdt check` in CI to fail builds on stale docs

----- stderr -----
