mdt_cli/tests/snapshots/snapshots__list_blocks_verbose.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpl5vipq
    - "--verbose"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 2 provider(s), 3 consumer(s)
  Providers:
    @apiDocs (template.t.md)
    @greeting (template.t.md)
Providers:
  @apiDocs template.t.md:7 (1 consumer(s))
  @greeting template.t.md:1 (2 consumer(s))

Consumers:
  =greeting lib.rs:1 |trim|linePrefix:"//! ":true [linked]
  =greeting readme.md:3 [linked]
  =apiDocs readme.md:11 |trim [linked]

2 provider(s), 3 consumer(s)

----- stderr -----
