mdt_cli/tests/snapshots/snapshots__missing_provider_update.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpuMr7A2
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All consumer blocks are already up to date.

----- stderr -----
mdt::unused_provider

  ! [template.t.md:1:1] provider block `other_block` has no consumers
  help: add a consumer block `<!-- {=other_block} -->...<!-- {/other_block}
        -->`, remove the unused provider, or pass `--ignore-unused-blocks`

warning: consumer `nonexistent_block` at readme.md:3:1 has no provider
