mdt_cli/tests/snapshots/snapshots__multiple_providers_dry_run.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpo1WgWL
    - update
    - "--dry-run"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Dry run: would update 6 block(s) in 2 file(s):
  docs.md
  readme.md

----- stderr -----
